Added CORS for localhost
